Version 0.1
	* --remove-onlye option
	* --ignore-flags option